--- a/Sugar.html
+++ b/Sugar.html
@@ -31,7 +31,7 @@
                         <li><a href="./createaccount.html">Create Account</a></li>
                         <li><a href="#">Log In</a></li>
                         <li><a href="#">More</a></li>
-                        <li><a href="#">Other</a></li>
+                        <li style="display: inline; margin-right: 10px"><a href="#">Other</a></li>
                     </ul>
                 </nav>
             </div>
@@ -64,7 +64,7 @@
                         <img src="Images/sugar-img3.png" alt="sugar-img3" class="sugar-img3">
                         <div class="img3-explanation">
                             <h3>[Tips]</h3>
-                            <p>If you succeed to get a lot of sugar, <br>you will get situation like this image. <br>
+                            <p class="p-explanation">If you succeed to get a lot of sugar, <br>you will get situation like this image. <br>
                             Then throw it carefully and boldly into the pot!</p>
                         </div>
                     </div>
