--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                         <li><a href="./createaccount.html">Create Account</a></li>
                         <li><a href="#">Log In</a></li>
                         <li><a href="#">More</a></li>
-                        <li><a href="#">Other</a></li>
+                        <li style="display: inline; margin-right: 10px;"><a href="#">Other</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
+        <!-- main menu start from here -->
         <div id="body-container" style="height: auto !important;">
             <div class="main-menu">
                 <article id="body-menu-center">
@@ -131,7 +132,13 @@
             </div>
             
         </div>
+        <!-- footer start from here -->
         <footer>
+            <style>
+                footer div p{
+                    font-size: 18px;
+                }
+            </style>
             <div class="footer-container">
                 <h3>Stu<span class="footer-text" style="color: navy;">Ga</span> Wiki</h3>
                 <hr>
